hero section completed

--- a/src/index.css
+++ b/src/index.css
@@ -5,12 +5,11 @@
   box-sizing: border-box;
 }
 body{
-  background-color: #0a0c41;
-  color: white;
   margin: 0;
   padding: 0;
-}
-
-.hover-item:hover {
-  @apply bg-blue-400 h-full py-1 px-2 rounded-sm;
+  width: 100vw;
+  height: 100vh;
+  background-color: black;
+  color: white;
+  background-color: #0a0c41;  
 }
