video part completed with ScrollY

--- a/src/index.css
+++ b/src/index.css
@@ -11,5 +11,5 @@ body{
   height: 100vh; */
   background-color: black;
   color: white;
-  background-color: #0a0c41;  
+  background-color: #010331;  
 }
